Integration of a downloaded template.
Creation of HomeController, ArticleController, MapController, AdminController, ContactController, RegistrationController and their respective view.

Implementing the interactive map API on Map.index.twig.

--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -15,131 +15,73 @@
         </div>
     </section>
 
-<!-- MAP SECTION -->
-    <section class="row">
-        <div id="chartdiv" style="width: 100%; height: 800px;"></div>
-        <article id="region_list" class="col-lg-12">
-            <!--        ul>(li>a#region-$.btn.btn-primary.m-2{wilaya})*58-->
-            <ul class="row region-list">
-                <li><a href="" id="region-1" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-2" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-3" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-4" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-5" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-6" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-7" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-8" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-9" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-10" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-11" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-12" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-13" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-14" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-15" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-16" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-17" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-18" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-19" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-20" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-21" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-22" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-23" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-24" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-25" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-26" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-27" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-28" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-29" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-30" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-31" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-32" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-33" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-34" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-35" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-36" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-37" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-38" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-39" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-40" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-41" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-42" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-43" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-44" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-45" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-46" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-47" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-48" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-49" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-50" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-51" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-52" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-53" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-54" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-55" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-56" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-57" class="btn btn-primary m-2">wilaya</a></li>
-                <li><a href="" id="region-58" class="btn btn-primary m-2">wilaya</a></li>
-            </ul>
-        </article>
-    </section>
-
     <section>
         <div class="section-inner">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-camera"></i>
-                            <div class="content-area">
-                                <h3 class="title">Retina Display</h3>
-                                <div class="content">Conveniently productize inexpensive applications without multifunctional benefits. Energistically seize functional interfaces and resource-leveling customer service. Efficiently maximize mission-critical platforms with superior ideas. Synergistically utilize team driven.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-headphones"></i>
-                            <div class="content-area">
-                                <h3 class="title">Quality Support</h3>
-                                <div class="content">Dynamically mesh quality applications for leveraged users. Phosfluorescently predominate resource maximizing scenarios without future-proof scenarios. Intrinsicly actualize extensive e-tailers before superior technologies. Assertively morph interdependent expertise for virtual niche.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-rocket"></i>
-                            <div class="content-area">
-                                <h3 class="title">Lightweight</h3>
-                                <div class="content">Seamlessly simplify multidisciplinary users whereas team building manufactured products. Professionally enable dynamic action items whereas bricks-and-clicks processes. Dynamically mesh functional data without innovative materials. Seamlessly scale distributed methodologies.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-cloud-upload"></i>
-                            <div class="content-area">
-                                <h3 class="title">Cloud Backups</h3>
-                                <div class="content">Uniquely reintermediate customized methods of empowerment after cutting-edge convergence. Efficiently underwhelm functionalized value before worldwide services. Distinctively synergize synergistic infomediaries before low-risk high-yield methods.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-users"></i>
-                            <div class="content-area">
-                                <h3 class="title">Global Userbase</h3>
-                                <div class="content">Energistically e-enable visionary markets rather than empowered methodologies. Phosfluorescently actualize multimedia based "outside the box" thinking after distinctive interfaces. Continually grow technically sound total linkage for.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="icon-box-1 match-height mb30">
-                            <i class="fa-4x pe-7s-tools"></i>
-                            <div class="content-area">
-                                <h3 class="title">Handy Tools</h3>
-                                <div class="content">Synergistically network market positioning "outside the box" thinking via exceptional solutions. Completely synthesize progressive solutions without exceptional value. Uniquely evisculate orthogonal interfaces after bleeding-edge processes. Credibly.</div>
-                            </div>
-                        </div>
+                    <div id="chartdiv" class="col-sm-4" style="width: 900px; height: 800px;"></div>
+                    <div class="col-sm-4">
+                        <!--        ul>(li>a#region-$.btn.btn-primary.m-2{wilaya})*58-->
+                        <ul class="row" id="region-list">
+                            <li><a href="" id="region-1" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-2" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-3" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-4" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-5" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-6" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-7" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-8" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-9" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-10" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-11" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-12" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-13" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-14" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-15" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-16" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-17" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-18" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-19" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-20" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-21" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-22" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-23" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-24" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-25" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-26" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-27" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-28" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-29" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-30" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-31" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-32" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-33" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-34" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-35" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-36" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-37" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-38" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-39" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-40" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-41" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-42" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-43" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-44" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-45" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-46" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-47" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-48" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-49" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-50" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-51" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-52" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-53" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-54" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-55" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-56" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-57" class="btn btn-primary m-2">wilaya</a></li>
+                            <li><a href="" id="region-58" class="btn btn-primary m-2">wilaya</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -223,9 +165,4 @@
             </div>
         </div>
     </div>
-
-{% block javascripts %}
-
-{% endblock %}
-
 {% endblock %}
