--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,6 @@
         <script src="https://www.amcharts.com/lib/4/core.js"></script> <!-- core module (main module) -->
         <script src="https://www.amcharts.com/lib/4/maps.js"></script> <!-- maps module -->
         <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script> <!-- map file in GeoJson format -->
-        <script src="https://www.amcharts.com/lib/4/themes/material.js"></script>
 
         <link rel="shortcut icon" href="assets/img/ico/favicon.ico">
         <link rel="apple-touch-icon" sizes="144x144" href="assets/img/ico/apple-touch-icon-144x144.png">
@@ -49,7 +48,7 @@
 
         <!-- Custom CSS -->
         <link href="assets/css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ absolute_url(asset('css/style.css')) }}"/>
+        <link href="css/myStyle.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -69,43 +68,6 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-fixed-top fadeInDown" data-wow-delay="0.5s">
-            <div class="top-bar smoothie hidden-xs">
-                <div class="container">
-                    <div class="clearfix">
-                        <ul class="list-inline social-links wow pull-left">
-                            <li>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-behance"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-
-                        <div class="pull-right text-right">
-                            <ul class="list-inline">
-                                <li>
-                                    <div><i class="fa fa-envelope-o"></i> email@domain.com</div>
-                                </li>
-                                <li>
-                                    <div class="meta-item"><i class="fa fa-mobile"></i> +44 8780 648 605</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header page-scroll">
@@ -501,11 +463,9 @@
     </div>
 
         {% block javascripts %}
-
             <script src="assets/js/jquery.js"></script>
             <script src="assets/js/bootstrap.min.js"></script>
             <script src="assets/js/plugins.js"></script>
-            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
             <script src="assets/js/init.js"></script>
 
             <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -527,11 +487,7 @@
                 });
             </script>
 
-
             <script src="js/regionData.js"></script> <!--Json data of Algeria's regions-->
-
-
-            <!-- Custom JS -->
             <script src="js/mapConfig.js"></script>
         {% endblock %}
     </body>
