Fronted : Adding a modal to the map on click on a region, displayin region info on the right on hover and modifying the style of the map and its features. Organising the map javascript code in a class with methods.
Backend :
Implementing a crud for articles and a member space with admin and user roles.
Adding a system to comment aricles.
Creating the admin side of the app with a main dashboard, a comment dashboard and a user dashboard.

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -38,7 +38,7 @@
                                 {% for article in articles %}
                                         <div class="col-xl-4 col-lg-6 col-md-12 card py-5 card-dashboard">
                                             <div class="text w-100 pl-md-3 text-center">
-                                                <img src="{{ article.picture }}" alt="Article image" class="img-fluid mb-3">
+                                                <img src="{{ vich_uploader_asset(article,'imageFile') }}" class="img-fluid mb-3" alt="{{ article.imagename }}">
                                                 <p class="text-center">Title</p>
                                                 <h3 class="text-center">
                                                     {{ article.title }}
