--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -24,8 +24,9 @@
                     <div class="col-md-12 text-center dashboard_menu">
                         <h2>Posts</h2>
                         <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">User list</a>
-                        <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Comment list</a>
+                        <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Reported comments</a>
                         <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create a post</a>
+                        <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
                     </div>
                 </div>
 
@@ -62,8 +63,9 @@
                                                 <br>
                                                 <p class="text-center">Available options</p>
                                                 <div class="d-flex justify-content-center">
-                                                    <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-success btn-sm mx-2 display-button">See</a>
+                                                    <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-info btn-sm mx-2 display-button">See</a>
                                                     <a href="{{ path('article_edit', {'id': article.id}) }}" class="btn btn-warning btn-sm mx-2 modify-button">Edit</a>
+                                                    {{ include('article/_delete_form.html.twig') }}
                                                 </div>
                                             </div>
                                         </div>
