--- a/templates/admin/manageComments.html.twig
+++ b/templates/admin/manageComments.html.twig
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mt30 wow text-center">
-                        <h2 class="section-heading">Comment list</h2>
+                        <h2 class="section-heading">Reported comments</h2>
                     </div>
                 </div>
             </div>
@@ -22,10 +22,11 @@
             <div class="container">
                 <div class="row header-dashboard py-5">
                     <div class="col-md-12 text-center dashboard_menu">
-                        <h2>Comment list</h2>
+                        <h2>Reported comments</h2>
                         <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
                         <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">User list</a>
                         <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create a post</a>
+                        <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
                     </div>
                 </div>
 
@@ -38,16 +39,25 @@
                             <th>Content</th>
                             <th>Article commented</th>
                             <th>CreatedAt</th>
+                            <th>Number of reports</th>
+                            <th>Unreport comment</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for comment in comments %}
+                            {% if(comment.reported > 0) %}
                             <tr>
                                 <td>{{ comment.username.firstname }}</td>
                                 <td>{{ comment.content }}</td>
                                 <td>{{ comment.article.title }}</td>
                                 <td>{{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                                <td>{{ comment.reported}}</td>
+                                <td>
+                                    <a href="{{ path('unreport_comment', {'id': comment.id}) }}" class="btn btn-success btn-sm mx-2">Unreport</a>
+                                    <a href="{{ path('delete_comment', {'id': comment.id}) }}" class="btn btn-danger btn-sm mx-2">Delete</a>
+                                </td>
                             </tr>
+                            {% endif %}
                         {% else %}
                             <tr>
                                 <td colspan="6">no records found</td>
