--- a/templates/admin/manageUsers.html.twig
+++ b/templates/admin/manageUsers.html.twig
@@ -24,10 +24,12 @@
                     <div class="col-md-12 text-center dashboard_menu">
                         <h2>User list</h2>
                         <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
-                        <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Comment list</a>
+                        <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Reported comments</a>
                         <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create a post</a>
+                        <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
                     </div>
                 </div>
+            </div>
 
             <div class="container">
 
@@ -38,7 +40,7 @@
                         <th>Lastname</th>
                         <th>Email</th>
                         <th>CreatedAt</th>
-{#                        <th>Picture</th>#}
+                        <th>Delete user</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -49,7 +51,7 @@
                             <td>{{ user.lastname }}</td>
                             <td>{{ user.email }}</td>
                             <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-{#                            <td><img src="{{ article.picture }}" alt="Article image"></td>#}
+                            <td> <a href="{{ path('delete_user', {'id': user.id }) }}" class="btn btn-danger">Delete</a></td>
                         </tr>
                         {% endif %}
                     {% else %}
