--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,10 @@
         <script src="https://cdn.tiny.cloud/1/j7edr96twwloguzfrtwtxsez5j6jx7gbta70ac6v012jsl6z/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
         <script>tinymce.init({selector:'.adminForm',});</script>
 
+        <!-- icones fontawesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+              integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
         <!-- Map chart required script -->
         <script src="https://www.amcharts.com/lib/4/core.js"></script> <!-- core module (main module) -->
         <script src="https://www.amcharts.com/lib/4/maps.js"></script> <!-- maps module -->
