--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,7 @@
     <script src="https://www.amcharts.com/lib/4/core.js"></script> <!-- core module (main module) -->
     <script src="https://www.amcharts.com/lib/4/maps.js"></script> <!-- maps module -->
     <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script> <!-- map file in GeoJson format -->
+    <script src="//www.amcharts.com/lib/4/themes/animated.js"></script> <!-- animated map file -->
 
     <!-- icones fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -61,49 +62,6 @@
 </head>
 
 <body>
-
-<!-- Navigation -->
-{#<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">#}
-{#    <div class="container">#}
-{#        <a class="navbar-brand" href="{{ path('home') }}">ALGERdiscoveRIE</a>#}
-{#        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">#}
-{#            <span class="navbar-toggler-icon"></span>#}
-{#        </button>#}
-{#        <div class="collapse navbar-collapse" id="navbarResponsive">#}
-{#            <ul class="navbar-nav ml-auto">#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('home') }}">Home</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('map') }}">Map</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('article') }}">Articles</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('contact') }}">Contact</a>#}
-{#                </li>#}
-{#                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('app_logout') }}">Log Out</a>#}
-{#                </li>#}
-{#                {% else %}#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('registration') }}">Sign Up</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('app_login') }}">Log In</a>#}
-{#                </li>#}
-{#                {% endif %}#}
-{#                {% if is_granted('ROLE_ADMIN') %}#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{{ path('admin') }}">Dashboard</a>#}
-{#                </li>#}
-{#                {% endif %}#}
-{#            </ul>#}
-{#        </div>#}
-{#    </div>#}
-{#</nav>#}
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="{{ path('home') }}">ALGERdiscoveRIE</a>
